syntax = "proto3";

package pb;

service Quotar {
    rpc CreateDir (CreateDirReq) returns (CreateDirResp);
    rpc DeleteDir (DeleteDirReq) returns (DeleteDirResp);
}

message DeleteDirReq {
    string name = 1;
}

message DeleteDirResp {

}



message CreateDirReq {
    string name = 1;
    string quota = 2;
}

message CreateDirResp {
    string path = 1;
}